--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
     "scripts": {
-      "start": "node app.js"
+        "start": "node app.js"
     },
     "dependencies": {
-      "express": "^4.17.1"
+        "express": "^4.17.1",
+        "mariadb": "^3.2.3",
+        "mysql": "^2.18.1"
     }
-  }
-  
+}
