--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
         "start": "node app.js"
     },
     "dependencies": {
+        "bcrypt": "^5.1.1",
         "express": "^4.17.1",
+        "jsonwebtoken": "^9.0.2",
         "mariadb": "^3.2.3",
-        "mysql": "^2.18.1"
+        "mysql": "^2.18.1",
+        "mysql2": "^3.7.0",
+        "sequelize": "^6.35.2"
     }
 }
