--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
         "mysql": "^2.18.1",
         "mysql2": "^3.7.0",
         "sequelize": "^6.35.2",
-        "sequelize-mock": "^0.10.2",
         "sqlite3": "^5.1.7",
         "supertest": "^6.3.4"
+    },
+    "devDependencies": {
+        "node-mocks-http": "^1.14.1",
+        "sequelize-mock": "^0.10.2"
     }
 }
