--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
         "mysql2": "^3.7.0",
         "sequelize": "^6.35.2",
         "sqlite3": "^5.1.7",
-        "supertest": "^6.3.4"
-    },
-    "devDependencies": {
+        "supertest": "^6.3.4",
         "bcrypt": "^5.1.1",
         "dotenv": "^16.3.2",
         "node-mocks-http": "^1.14.1",
