--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "scripts": {
-        "start": "node app.js"
+        "start": "node app.js",
+        "test": "node test/test.js"
     },
     "dependencies": {
         "bcrypt": "^5.1.1",
@@ -9,6 +10,8 @@
         "mariadb": "^3.2.3",
         "mysql": "^2.18.1",
         "mysql2": "^3.7.0",
-        "sequelize": "^6.35.2"
+        "sequelize": "^6.35.2",
+        "sinon": "^17.0.1",
+        "supertest": "^6.3.4"
     }
 }
